Update 04-mei-2025 19:04 perubahan pada forlder stopwatch, file style.css, perubahan pada bagian body penambahan overflow dan revisi padding

--- a/Stopwatch/style.css
+++ b/Stopwatch/style.css
@@ -8,7 +8,8 @@ body{
     justify-content: center;
     align-items: center;
     display: flex;
-    padding: 80px;
+    padding: 12%;
+    overflow: hidden;
 }
 
 
